adding meta tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,34 @@
     />
     <link rel="manifest" href="./src/assets/favicon_io/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cui Atd Unoffical</title>
+    <meta
+      name="description"
+      content="Explore the unofficial CUI Timetable for the Abbottabad campus. Stay organized with class schedules, subjects, teachers, and more."
+    />
+    <meta
+      name="keywords"
+      content="CUI Timetable, Abbottabad campus, unofficial, class schedules, subjects, teachers, university timetable"
+    />
+    <meta name="author" content="Muhammad Nawaz Khan" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="CUI Timetable - Abbottabad Campus (Unofficial)"
+    />
+    <meta
+      property="og:description"
+      content="Explore the unofficial CUI Timetable for the Abbottabad campus. Stay organized with class schedules, subjects, teachers, and more."
+    />
+    <meta property="og:image" content="your-image-url.jpg" />
+    <meta
+      property="og:url"
+      content="http://cuiunofficialtimetable.vercel.app/"
+    />
+    <meta property="og:type" content="website" />
+
+    <title>CUI Timetable - Abbottabad Campus (Unofficial)</title>
   </head>
   <body>
     <div id="root"></div>
