added some meta tags

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
     <meta
       name="keywords"
-      content="CUI Timetable, Abbottabad campus, unofficial, class schedules, subjects, teachers, university timetable"
+      content="CUI Timetable, Abbottabad campus, unofficial, class schedules, subjects, teachers, university timetable, cuiunofficalTimetable, cui atd TimeTable, special Timetable,Cuiunofficialtimetable  "
     />
     <meta name="author" content="Muhammad Nawaz Khan" />
     <meta name="robots" content="index, follow" />
@@ -47,6 +47,7 @@
       content="http://cuiunofficialtimetable.vercel.app/"
     />
     <meta property="og:type" content="website" />
+    <meta name="google-site-verification" content="NJzg8JHuSl8j5clxOELfX-h5pUdHalGiPz9n1oKgoBg" />
 
     <title>CUI Timetable - Abbottabad Campus (Unofficial)</title>
   </head>
