--- a/index.html
+++ b/index.html
@@ -47,8 +47,22 @@
       content="http://cuiunofficialtimetable.vercel.app/"
     />
     <meta property="og:type" content="website" />
-    <meta name="google-site-verification" content="NJzg8JHuSl8j5clxOELfX-h5pUdHalGiPz9n1oKgoBg" />
-
+    <meta
+      name="google-site-verification"
+      content="NJzg8JHuSl8j5clxOELfX-h5pUdHalGiPz9n1oKgoBg"
+    />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4GH1YL4D94"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-4GH1YL4D94');
+    </script>
     <title>CUI Timetable - Abbottabad Campus (Unofficial)</title>
   </head>
   <body>
