config in index

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     />
     <script
       async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6199669785365712"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      async
       src="https://www.googletagmanager.com/gtag/js?id=G-4GH1YL4D94"
     ></script>
     <script>
